philly-311-citywide-meta/src/objects/Feedback_Week__c.object
<CustomObject>
    <fields>
        <fullName>Ending_Date__c</fullName>
        <description>The feedback week ending date.</description>
        <label>Ending Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Feedback__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Feedback</label>
        <referenceTo>Feedback__c</referenceTo>
        <relationshipLabel>Feedback Weeks</relationshipLabel>
        <relationshipName>Feedback_Weeks</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Friday_Hours__c</fullName>
        <label>Friday Hours</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monday_Hours__c</fullName>
        <label>Monday Hours</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Saturday_Hours__c</fullName>
        <label>Saturday Hours</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sunday_Hours__c</fullName>
        <label>Sunday Hours</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Thursday_Hours__c</fullName>
        <label>Thursday Hours</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Hours__c</fullName>
        <formula>Monday_Hours__c + Tuesday_Hours__c + Wednesday_Hours__c + Thursday_Hours__c + Friday_Hours__c + Saturday_Hours__c + Sunday_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tuesday_Hours__c</fullName>
        <label>Tuesday Hours</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Feedback_Weeks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Wednesday_Hours__c</fullName>
        <label>Wednesday Hours</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Feedback Week</label>
    <nameField>
        <displayFormat>FW-{0}</displayFormat>
        <label>Feedback Week Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feedback Weeks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>